# qamqp

./: CMakeLists.txt
cmake/: qamqpConfig.cmake.in
src/: CMakeLists.txt  qamqpclient.cpp  qamqpclient.h  qamqpclient_p.h
